--- a/i18n/ru/LC_MESSAGES/messages.po
+++ b/i18n/ru/LC_MESSAGES/messages.po
@@ -10,36 +10,36 @@ msgstr ""
 "POT-Creation-Date: 2024-12-23 22:42-0300\n"
 "PO-Revision-Date: 2024-12-23 22:42-0300\n"
 "Last-Translator: \n"
-"Language: zh_CN\n"
 "Language-Team: sprintFont <LL@li.org>\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "Generated-By: Babel 2.14.0\n"
 
 #: kicad_to_sprint.py:231
 msgid "The file contains no components."
-msgstr "此文件没有包含任何元件。"
+msgstr "Этот файл не содержит компонентов."
 
 #: lceda_to_sprint.py:90
 msgid "The ID is empty."
-msgstr "ID为空。"
+msgstr "ID пуст."
 
 #: lceda_to_sprint.py:117
 msgid "open failed: {}, {}"
-msgstr "打开错误：{}, {}"
+msgstr "Ошибка при открытии: {}, {}"
 
 #: lceda_to_sprint.py:120 lceda_to_sprint.py:186 lceda_to_sprint.py:203
 msgid "The content is not a valid json format"
-msgstr "内容不是合法的json格式"
+msgstr "Содержимое не является допустимым форматом JSON"
 
 #: lceda_to_sprint.py:203
 msgid ""
 "Error from easyEDA:\n"
 "{}"
 msgstr ""
-"来自立创的错误信息：\n"
+"Ошибка от easyEDA:\n"
 "{}"
 
 #: sprintFont.py:725
@@ -48,69 +48,69 @@ msgstr "sprintFont"
 
 #: sprintFont.py:726
 msgid "Inverted Background"
-msgstr "反转背景"
+msgstr "Инвертированный фон"
 
 #: sprintFont.py:727
 msgid "Padding"
-msgstr "内边距"
+msgstr "Отступ"
 
 #: sprintFont.py:728
 msgid "Cap left"
-msgstr "左侧形状"
+msgstr "Левая форма"
 
 #: sprintFont.py:729
 msgid "Cap right"
-msgstr "右侧形状"
+msgstr "Правая форма"
 
 #: sprintFont.py:730 sprintFont.py:743 sprintFont.py:750
 msgid "Ok"
-msgstr "确定"
+msgstr "Ок"
 
 #: sprintFont.py:731 sprintFont.py:744 sprintFont.py:749 sprintFont.py:761
 #: sprintFont.py:771 sprintFont.py:780
 msgid "Cancel"
-msgstr "取消"
+msgstr "Отмена"
 
 #: sprintFont.py:732
 msgid "Text"
-msgstr "文本"
+msgstr "Текст"
 
 #: sprintFont.py:733 sprintFont.py:755
 msgid "Layer"
-msgstr "板层"
+msgstr "Слой"
 
 #: sprintFont.py:734 sprintFont.py:754
 msgid "Smooth"
-msgstr "平滑"
+msgstr "Гладкий"
 
 #: sprintFont.py:735
 msgid "Word spacing (mm)"
-msgstr "字间距 (mm)"
+msgstr "Расстояние между словами (мм)"
 
 #: sprintFont.py:736
 msgid "Line spacing (mm)"
-msgstr "行间距 (mm)"
+msgstr "Межстрочный интервал (мм)"
 
 #: sprintFont.py:737 sprintFont.py:747 sprintFont.py:756 sprintFont.py:766
 #: sprintFont.py:783
 msgid "Save as"
-msgstr "另存为"
+msgstr "Сохранить как"
 
 #: sprintFont.py:738
 msgid "Font"
-msgstr "字体"
+msgstr "Шрифт"
 
 #: sprintFont.py:739 sprintFont.py:752
 msgid "Height (mm)"
-msgstr "字高 (mm)"
+msgstr "Высота (мм)"
 
 #: sprintFont.py:740
 msgid "     Font     "
-msgstr "       字体      "
+msgstr "   Шрифт     "
 
 #: sprintFont.py:741
 msgid "Import text"
-msgstr "导入文本"
+msgstr "Импорт текста"
 
 #: sprintFont.py:742 sprintFont.py:751 sprintFont.py:760 sprintFont.py:763
 msgid "..."
@@ -118,7 +118,7 @@ msgstr "..."
 
 #: sprintFont.py:745
 msgid "Input"
-msgstr "输入"
+msgstr "Ввод"
 
 #: sprintFont.py:746
 msgid ""
@@ -126,189 +126,193 @@ msgid ""
 "1. Kicad footprint Library : *.kicad_mod\n"
 "2. EasyEDA part ID: C + number (C can be omitted)"
 msgstr ""
-"当前支持：\n"
-"1. Kicad 封装库文件：*.kicad_mod\n"
-"2. 力创商城元件编号：C + 若干位数字 (C可省略)"
+"Текущая поддержка:\n"
+"1. Библиотека Kicad footprint: *.kicad_mod\n"
+"2. ID детали EasyEDA: C + число (C можно опустить)"
 
 #: sprintFont.py:748
 msgid "   Footprint  "
-msgstr "       封装      "
+msgstr "  Футпринт   "
 
 #: sprintFont.py:753
 msgid "Mode"
-msgstr "模式"
+msgstr "Режим"
 
 #: sprintFont.py:757
 msgid ""
 "Note:\n"
 "Only for simple images, may fail to convert complex images"
 msgstr ""
-"注意：\n"
-"仅适用于简单的图像，复杂的图像可能会转换失败"
+"Примечание:\n"
+"Только для простых изображений, сложные изображения могут не конвертироваться"
 
 #: sprintFont.py:758
 msgid "  SVG/Qrcode  "
-msgstr "    SVG/二维码   "
+msgstr "  SVG/QR-код  "
 
 #: sprintFont.py:759
 msgid "Import SES"
-msgstr "导入SES"
+msgstr "Импорт SES"
 
 #: sprintFont.py:762
 msgid "Export DSN"
-msgstr "导出DSN"
+msgstr "Экспорт DSN"
 
 #: sprintFont.py:764
 msgid "Rules"
-msgstr "布线规则"
+msgstr "Правила трассировки"
 
 #: sprintFont.py:765
 msgid "Ses file"
-msgstr "SES文件"
+msgstr "Ses Файл"
 
 #: sprintFont.py:767
 msgid ""
 "Open the exported DSN file with Freerouting for autorouting\n"
 "Currently only supports all components placed on the front side"
 msgstr ""
-"使用 Freerouting 打开导出后的DSN文件进行自动布线\n"
-"当前仅支持在板子正面放置元件"
+"Откройте экспортированный файл DSN с помощью Freerouting для автотрассировки\n"
+"Текущая поддержка только для компонентов, размещенных на верхней стороне"
 
 #: sprintFont.py:768
 msgid "Dsn file"
-msgstr "DSN文件"
+msgstr "Dsn Файл"
 
 #: sprintFont.py:769
 msgid "  AutoRouter  "
-msgstr "    自动布线     "
+msgstr "Автопрокладка"
 
 #: sprintFont.py:770
 msgid "Remove"
-msgstr "删除"
+msgstr "Удалить"
 
 #: sprintFont.py:772
 msgid "Add"
-msgstr "添加"
+msgstr "Добавить"
 
 #: sprintFont.py:773
 msgid "Pad type"
-msgstr "焊盘类型"
+msgstr "Тип пэд"
 
 #: sprintFont.py:774
 msgid ""
-"Apply to all pads when deselecting all, otherwise apply to selected pads "
-"AND tracks only"
-msgstr "取消全部选择时应用到所有焊盘，否则仅应用到您选择的焊盘和对应的走线"
+"Apply to all pads when deselecting all, otherwise apply to selected pads AND"
+" tracks only"
+msgstr ""
+"Применить ко всем пэдам при отмене выбора, иначе применить только к "
+"выбранным пэдам и дорожкам"
 
 #: sprintFont.py:775
 msgid "Horizontal percent"
-msgstr "水平比例 (H)"
+msgstr "Горизонтальный процент (H)"
 
 #: sprintFont.py:776 sprintFont.py:785
 msgid "Number of segments"
-msgstr "线段数量"
+msgstr "Количество сегментов"
 
 #: sprintFont.py:777
 msgid "Vertical percent"
-msgstr "垂直比例 (W)"
+msgstr "Вертикальный процент (W)"
 
 #: sprintFont.py:778
 msgid "  Teardrop    "
-msgstr "    泪滴焊盘     "
+msgstr "    Капля     "
 
 #: sprintFont.py:779
 msgid "Convert"
-msgstr "转换"
+msgstr "Конвертировать"
 
 #: sprintFont.py:781
 msgid "Type"
-msgstr "类型"
+msgstr "Тип"
 
 #: sprintFont.py:782
 msgid "small d(mm)"
-msgstr "小 d(mm)"
+msgstr "малый d(мм)"
 
 #: sprintFont.py:784
 msgid "big d(mm)"
-msgstr "大 d(mm)"
+msgstr "большой d(мм)"
 
 #: sprintFont.py:786
 msgid ""
-"Apply to all tracks when deselecting all, otherwise apply to selected "
-"tracks only"
-msgstr "取消全部选择时应用到所有走线，否则仅应用到您选择的走线"
+"Apply to all tracks when deselecting all, otherwise apply to selected tracks"
+" only"
+msgstr ""
+"Применить ко всем дорожкам при отмене выбора, иначе применить только к "
+"выбранным дорожкам"
 
 #: sprintFont.py:787
 msgid " RoundedTrack "
-msgstr "    圆弧走线     "
+msgstr " Круглый трек"
 
 #: sprintFont.py:860
 msgid "Please deselect all items before launching the plugin"
-msgstr "请取消全部选择然后再执行此插件"
+msgstr "Пожалуйста, отмените выбор всех элементов перед запуском плагина"
 
 #: sprintFont.py:953
 msgid "Import all (remove routed ratsnests)"
-msgstr "导入全部（删除已经布线成功的网络连接线）"
+msgstr "Импортировать все (удалить уже проложенные соединения)"
 
 #: sprintFont.py:954
 msgid "Import all (remove all ratsnests)"
-msgstr "导入全部（删除所有网络连接线）"
+msgstr "Импортировать все (удалить все соединения)"
 
 #: sprintFont.py:955
 msgid "Import all (keep all ratsnests)"
-msgstr "导入全部（保留所有网络连接线）"
+msgstr "Импортировать все (сохранить все соединения)"
 
 #: sprintFont.py:956
 msgid "Import auto-routed tracks only"
-msgstr "仅导入自动布线的铜箔走线"
+msgstr "Импортировать только автоматически проложенные дорожки"
 
 #: sprintFont.py:991
 msgid "C1 (Front copper)"
-msgstr "C1 (顶层覆铜层)"
+msgstr "C1 (Передняя медь)"
 
 #: sprintFont.py:991
 msgid "S1 (Front silkscreen)"
-msgstr "S1 (顶层丝印层)"
+msgstr "S1 (Передний шелк)"
 
 #: sprintFont.py:991
 msgid "C2 (Back copper)"
-msgstr "C2 (底层覆铜层)"
+msgstr "C2 (Задняя медь)"
 
 #: sprintFont.py:992
 msgid "S2 (Back silkscreen)"
-msgstr "S2 (底层丝印层)"
+msgstr "S2 (Задний шелк)"
 
 #: sprintFont.py:992
 msgid "I1 (Inner copper1)"
-msgstr "I1 (内部覆铜层1)"
+msgstr "I1 (Внутренняя медь 1)"
 
 #: sprintFont.py:992
 msgid "I2 (Inner copper2)"
-msgstr "I2 (内部覆铜层2)"
+msgstr "I2 (Внутренняя медь 2)"
 
 #: sprintFont.py:992
 msgid "U (Edge.cuts)"
-msgstr "U (印刷板边界层)"
+msgstr "U (Обрезка краев)"
 
 #: sprintFont.py:1014
 msgid "Super fine (super slow)"
-msgstr "超精细 (超级慢)"
+msgstr "Супер точный (супер медленный)"
 
 #: sprintFont.py:1014
 msgid "Fine (slow)"
-msgstr "精细 (慢)"
+msgstr "Тонкий (медленный)"
 
 #: sprintFont.py:1014
 msgid "Normal"
-msgstr "正常"
+msgstr "Нормальный"
 
 #: sprintFont.py:1014
 msgid "Rough"
-msgstr "稍粗糙"
+msgstr "Грубый"
 
 #: sprintFont.py:1014
 msgid "Super Rough"
-msgstr "比较粗糙"
+msgstr "Очень грубый"
 
 #: sprintFont.py:1035
 msgid "SVG"
@@ -316,64 +320,64 @@ msgstr "SVG"
 
 #: sprintFont.py:1035
 msgid "Qrcode"
-msgstr "二维码"
+msgstr "QR-код"
 
 #: sprintFont.py:1040
 msgid "Track"
-msgstr "线条"
+msgstr "Дорожка"
 
 #: sprintFont.py:1040
 msgid "Polygon"
-msgstr "多边形"
+msgstr "Многоугольник"
 
 #: sprintFont.py:1059
 msgid "PTH pad"
-msgstr "通孔焊盘"
+msgstr "PTH pad"
 
 #: sprintFont.py:1059
 msgid "SMD pad"
-msgstr "贴片焊盘"
+msgstr "SMD pad"
 
 #: sprintFont.py:1059
 msgid "PTH/SMD"
-msgstr "通孔/贴片"
+msgstr "PTH/SMD"
 
 #: sprintFont.py:1064
 msgid "Tangent"
-msgstr "切线圆弧"
+msgstr "Тангенциальная дуга"
 
 #: sprintFont.py:1064
 msgid "Three-point"
-msgstr "三点圆弧"
+msgstr "Трехточечная дуга"
 
 #: sprintFont.py:1064
 msgid "Bezier"
-msgstr "贝塞尔曲线"
+msgstr "Кривая Безье"
 
 #: sprintFont.py:1286
 msgid "Kicad footprint"
-msgstr "Kicad封装文件"
+msgstr "Шаблон Kicad"
 
 #: sprintFont.py:1287
 msgid "easyEDA footprint"
-msgstr "力创封装文件"
+msgstr "Шаблон easyEDA"
 
 #: sprintFont.py:1287 sprintFont.py:1293 sprintFont.py:1299 sprintFont.py:1308
 #: sprintFont.py:1541
 msgid "All files"
-msgstr "所有文件"
+msgstr "Все файлы"
 
 #: sprintFont.py:1293
 msgid "SVG files"
-msgstr "SVG矢量图像文件"
+msgstr "Файлы SVG векторных изображений"
 
 #: sprintFont.py:1299
 msgid "Specctra DSN files"
-msgstr "自动布线DSN文件"
+msgstr "Файлы DSN для автоматической разводки"
 
 #: sprintFont.py:1308
 msgid "Specctra session files"
-msgstr "自动布线session文件"
+msgstr "Файлы сеанса Specctra"
 
 #: sprintFont.py:1358 sprintFont.py:1363 sprintFont.py:1365 sprintFont.py:1381
 #: sprintFont.py:1384 sprintFont.py:1386 sprintFont.py:1396 sprintFont.py:1401
@@ -386,96 +390,96 @@ msgstr "自动布线session文件"
 #: sprintFont.py:2158 sprintFont.py:2182 sprintFont.py:2190 sprintFont.py:2206
 #: sprintFont.py:2210 sprintFont.py:2217 sprintFont.py:2221 sprintFont.py:2256
 msgid "info"
-msgstr "信息"
+msgstr "Информация"
 
 #: sprintFont.py:1358 sprintFont.py:1396
 msgid "Text is empty"
-msgstr "文本为空"
+msgstr "Текст пуст"
 
 #: sprintFont.py:1363 sprintFont.py:1401
 msgid "Failed to generate text"
-msgstr "创建文本失败"
+msgstr "Не удалось создать текст"
 
 #: sprintFont.py:1384 sprintFont.py:1434
 msgid ""
 "Failed to parse content\n"
 "Maybe Id error or Internet disconnected?"
 msgstr ""
-"分析内容错误：\n"
-"可能是ID错误或网络不通？"
+"Ошибка анализа содержимого:\n"
+"Возможно, ошибка ID или нет подключения к Интернету?"
 
 #: sprintFont.py:1386 sprintFont.py:1436
 msgid "Failed to parse file content"
-msgstr "分析文件内容错误"
+msgstr "Ошибка анализа содержимого файла"
 
 #: sprintFont.py:1459 sprintFont.py:1500 sprintFont.py:1852 sprintFont.py:1966
 #: sprintFont.py:2026 sprintFont.py:2062
 msgid "The file format is not supported"
-msgstr "此文件格式暂不支持"
+msgstr "Этот формат файла не поддерживается"
 
 #: sprintFont.py:1463 sprintFont.py:1504
 msgid "Convert svg image failed"
-msgstr "转换SVG图像失败"
+msgstr "Не удалось преобразовать изображение SVG"
 
 #: sprintFont.py:1516
 msgid "Input is empty"
-msgstr "输入为空"
+msgstr "Ввод пуст"
 
 #: sprintFont.py:1523
 msgid ""
 "File does not exist\n"
 "{}"
 msgstr ""
-"文件不存在\n"
+"Файл не существует\n"
 "{}"
 
 #: sprintFont.py:1541
 msgid "Save to a text file"
-msgstr "保存为一个文本文件"
+msgstr "Сохранить в текстовый файл"
 
 #: sprintFont.py:1541
 msgid "Text files"
-msgstr "文本文件"
+msgstr "Текстовые файлы"
 
 #: sprintFont.py:1549
 msgid ""
 "Failed to save file.\n"
 "{}"
 msgstr ""
-"保存文件失败\n"
+"Не удалось сохранить файл.\n"
 "{}"
 
 #: sprintFont.py:1903
 msgid "  New version found, double-click to show details"
-msgstr "  发现新版本，双击显示详情"
+msgstr "  Найдена новая версия, дважды щелкните, чтобы показать детали"
 
 #: sprintFont.py:1911
 msgid "Item"
-msgstr "项目"
+msgstr "Элемент"
 
 #: sprintFont.py:1912
 msgid "Value"
-msgstr "数值"
+msgstr "Значение"
 
 #: sprintFont.py:1914 sprintFont.py:1936
 msgid "Track width"
-msgstr "走线宽度"
+msgstr "Ширина трассы"
 
 #: sprintFont.py:1915 sprintFont.py:1938
 msgid "Via diameter"
-msgstr "过孔外径"
+msgstr "Диаметр vias"
 
 #: sprintFont.py:1916 sprintFont.py:1940
 msgid "Via drill"
-msgstr "过孔内径"
+msgstr "Диаметр сверления vias"
 
 #: sprintFont.py:1917 sprintFont.py:1942
 msgid "Clearance"
-msgstr "最小走线间隙"
+msgstr "Минимальный зазор между трассами"
 
 #: sprintFont.py:1918 sprintFont.py:1944
 msgid "Smd-Smd Clearance"
-msgstr "最小贴片到贴片间隙"
+msgstr "Минимальный зазор между SMD-компонентами"
 
 #: sprintFont.py:1932
 msgid ""
@@ -484,152 +488,150 @@ msgid ""
 "The unit is mm\n"
 msgstr ""
 "\n"
-"请输入一个新的“{}”配置值\n"
-"单位为毫米\n"
+"Пожалуйста, введите новое значение для параметра '{}'\n"
+"Единица измерения - мм\n"
 
 #: sprintFont.py:1934
 msgid "Edit parameter"
-msgstr "修改参数"
+msgstr "Изменить параметр"
 
 #: sprintFont.py:1954
 msgid "DSN file is empty"
-msgstr "DSN文件为空"
+msgstr "Файл DSN пуст"
 
 #: sprintFont.py:1978
 msgid "Unknown error"
-msgstr "未知错误"
+msgstr "Неизвестная ошибка"
 
 #: sprintFont.py:1987
 msgid "Export Specctra DSN file successfully"
-msgstr "导出自动布线DSN文件成功"
+msgstr "Успешный экспорт файла DSN для Specctra"
 
 #: sprintFont.py:2037
 msgid ""
-"This operation will completely replace the existing components and wiring"
-" on the board.\n"
+"This operation will completely replace the existing components and wiring on the board.\n"
 "Do you want to continue?"
 msgstr ""
-"这个操作将会全部替换电路板上的已有元件和布线。\n"
-"需要继续吗？"
+"Эта операция полностью заменит существующие компоненты и разводку на плате.\n"
+"Вы хотите продолжить?"
 
 #: sprintFont.py:2093
 msgid "whole board"
-msgstr "整板"
+msgstr "вся плата"
 
 #: sprintFont.py:2093
 msgid "partial"
-msgstr "部分"
+msgstr "часть"
 
 #: sprintFont.py:2094
 msgid "  In [{}] : {}"
-msgstr "  输入 [{}]：{}"
+msgstr "  В [{}] : {}"
 
 #: sprintFont.py:2096
 msgid "  Standalone mode"
-msgstr "  单独执行模式"
+msgstr "  Режим автономной работы"
 
 #: sprintFont.py:2111
 msgid "  Releases: "
-msgstr "  版本库： "
+msgstr "  Выпуски: "
 
 #: sprintFont.py:2113
 msgid "  Report bugs: "
-msgstr "  报告Bug： "
+msgstr "  Сообщить об ошибках: "
 
 #: sprintFont.py:2132
 msgid "Wrong parameter value"
-msgstr "参数值错误"
+msgstr "Неверное значение параметра"
 
 #: sprintFont.py:2142
 msgid "Successfully added [{}] teardrop pads"
-msgstr "成功添加 [{}] 个泪滴焊盘"
+msgstr "Успешно добавлено [{}] падов в виде капли"
 
 #: sprintFont.py:2147
 msgid "No teardrop pads are generated"
-msgstr "没有生成任何泪滴焊盘"
+msgstr "Не сгенерированы падов в виде капли"
 
 #: sprintFont.py:2158
 msgid ""
 "Dangerous operation:\n"
-"This operation may delete some small polygons by mistake or not delete "
-"the desired polygons\n"
+"This operation may delete some small polygons by mistake or not delete the desired polygons\n"
 "Do you want to continue?"
 msgstr ""
-"危险操作：\n"
-"这个操作可能会误删一些小多边形或没能完全删除需要的多边形。\n"
-"需要继续吗？"
+"Опасная операция:\n"
+"Эта операция может ошибочно удалить некоторые маленькие многоугольники или не удалить нужные многоугольники.\n"
+"Вы хотите продолжить?"
 
 #: sprintFont.py:2182
 msgid "Successfully removed [{}] teardrop pads"
-msgstr "成功删除 [{}] 个泪滴焊盘"
+msgstr "Успешно удалено [{}] падов в виде капли"
 
 #: sprintFont.py:2190
 msgid "No teardrop pads found"
-msgstr "没有找到泪滴焊盘"
+msgstr "Не найдено падов в виде капли"
 
 #: sprintFont.py:2210
 msgid "No components on the board"
-msgstr "电路板上没有元件"
+msgstr "На плате нет компонентов"
 
 #: sprintFont.py:2217
 msgid ""
 "Error parsing input file:\n"
 "{}"
 msgstr ""
-"分析输入文件时出错:\n"
+"Ошибка при анализе входного файла:\n"
 "{}"
 
 #: sprintFont.py:2221
 msgid "Failed to parse input file"
-msgstr "分析输入文件失败"
+msgstr "Не удалось проанализировать входной файл"
 
 #: sprintFont.py:2256
 msgid "No suitable track found"
-msgstr "没有找到符合条件的走线"
+msgstr "Не найдена подходящая трасса"
 
 #: version_check.py:163
 msgid "New version found"
-msgstr "发现新版本"
+msgstr "Найдена новая версия"
 
 #: version_check.py:164
 msgid "Current version: v{}"
-msgstr "当前版本：v{}"
+msgstr "Текущая версия: v{}"
 
 #: version_check.py:165
 msgid "Lastest version: v{}"
-msgstr "最新版本：v{}"
+msgstr "Последняя версия: v{}"
 
 #: version_check.py:166
 msgid "Download"
-msgstr "下载"
+msgstr "Скачать"
 
 #: version_check.py:167
 msgid "Skip this version"
-msgstr "跳过此版本"
+msgstr "Пропустить эту версию"
 
 #: version_check.py:168
 msgid "Later"
-msgstr "稍后"
+msgstr "Позже"
 
 #: widget_right_click.py:30
 msgid " Cut"
-msgstr " 剪切"
+msgstr " Вырезать"
 
 #: widget_right_click.py:31
 msgid " Copy"
-msgstr " 拷贝"
+msgstr " Копировать"
 
 #: widget_right_click.py:32
 msgid " Paste"
-msgstr " 粘贴"
+msgstr " Вставить"
 
 #: sprint_struct/font_to_polygon.py:42
 msgid "Failed to get glyph set from the font file you selected"
-msgstr "无法从您选择的字体文件中提取字形集"
+msgstr "Не удалось получить набор глифов из выбранного файла шрифта"
 
 #: sprint_struct/font_to_polygon.py:61
 msgid "No suitable character map found in the font file you selected"
-msgstr "在您选择的字体文件中找不到合适的字符表"
+msgstr "Не найдено подходящей карты символов в выбранном файле шрифта"
 
 #: sprint_struct/font_to_polygon.py:69
 msgid ""
@@ -637,7 +639,7 @@ msgid ""
 "\n"
 "{}"
 msgstr ""
-"在您选择的字体文件中找不到这个字符的字形\n"
+"Глиф для этого символа не найден в выбранном файле шрифта.\n"
 "\n"
 "{}"
 
@@ -647,17 +649,17 @@ msgid ""
 "\n"
 "{}"
 msgstr ""
-"获取这个字符串的字形失败\n"
+"Не удалось получить глиф для символа.\n"
 "\n"
 "{}"
 
 #: sprint_struct/sprint_export_dsn.py:70
 msgid "The boundary (layer U) of the board is not defined"
-msgstr "未定义电路板的边框（板层U）"
+msgstr "Граница (слой U) платы не определена"
 
 #: sprint_struct/sprint_export_dsn.py:77
 msgid "There are some components with the same name: {}"
-msgstr "存在重名的元件：{}"
+msgstr "Существуют компоненты с одинаковыми именами: {}"
 
 #: sprint_struct/sprint_export_dsn.py:87
 msgid ""
@@ -665,6 +667,6 @@ msgid ""
 "\n"
 "{}"
 msgstr ""
-"当前仅支持在电路板正面放置元件\n"
+"В настоящее время поддерживается только размещение всех компонентов на передней стороне платы\n"
 "\n"
 "{}"
